Apply the format change